--- a/css/style.css
+++ b/css/style.css
@@ -99,8 +99,38 @@ nav a:hover{
 }
  
 
+/* estilização página contato */
 
+main{
+    width: 940px;
+    margin: 0 auto;
+}
 
+form{
+    margin: 40px 0;
+
+}
+
+form label, form p{
+    display: block;
+    font-size: 20px;
+    margin:  0 0 10px;
+}
+
+.input-padrao{
+    display: block;
+    margin: 0 0 20px;
+    border-radius: 8px;
+    padding: 10px 25px;
+    width: 50%;
+    background-color:  rgb(155, 43, 155);
+    color: white;
+}
+
+.checkbox{
+    margin: 20px 0;
+    
+}
 
 
 
