--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,41 @@ form label, form p{
 }
 
 
+#enviar{
+    border-radius: 8px;
+     border: none; 
+     font-size: 18px; 
+     color: white; 
+     height: 45px; 
+     width: 240px; 
+     background: rgb(6, 185, 6);
+     cursor: pointer;
+     transition: 2s all;
+}
+
+#enviar:hover{
+    background: rgb(155, 43, 155);
+    transform: rotate(360deg) scale(2);;
+}
+
+table{
+    margin: 20px 0 40px;
+    
+}
+
+thead{
+    background-color:  rgb(155, 43, 155);
+    color: white;
+    border-radius: 8px;
+}
+
+td, th {
+    border: 1px solid rgb(155, 43, 155);
+    padding: 8px 15px;
+    font-size: 20px;
+    border-radius: 8px;
+}
+
 
 
 
